fix row padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,10 @@ div.indented {
 	white-space: pre-wrap;
 }
 
+.appinfo ~ .row {
+	padding: 0 1em;
+}
+
 @media(min-width: 600px) {
 	h1.indented {
 		display: block;
